# DynaCoRE

./: CMakeLists.txt  Configuration.h  README.md
Addition/Announce_data/: Announcer.cpp  CMakeLists.txt  IMU_Announcer.cpp  IMU_Announcer.h  announcer_protocol.h  receiver_example.cpp  receiver_example.h
DynaController/: CMakeLists.txt  Controller.hpp
DynaController/Cheetah3_Controller/: CMakeLists.txt  Cheetah3_DynaCtrl_Definition.h  Cheetah3_StateEstimator.cpp  Cheetah3_StateEstimator.hpp  Cheetah3_StateProvider.cpp  Cheetah3_StateProvider.hpp  Cheetah3_interface.cpp  Cheetah3_interface.hpp
DynaController/Cheetah3_Controller/Cheetah3TestConfig/: INTERFACE_setup.yaml
DynaController/Cheetah3_Controller/ContactSet/: FixedBodyContact.cpp  FixedBodyContact.hpp  SingleContact.cpp  SingleContact.hpp
DynaController/Cheetah3_Controller/CtrlSet/: BodyCtrl.cpp  BodyCtrl.hpp  BodyFootPlanningCtrl.cpp  BodyFootPlanningCtrl.hpp  SingleContactTransCtrl.cpp  SingleContactTransCtrl.hpp  SwingPlanningCtrl.hpp
DynaController/Cheetah3_Controller/TestSet/: BodyCtrlTest.cpp  WalkingTest.cpp  WalkingTest.hpp
DynaController/DracoP1_Controller/: DracoP1_interface.hpp
DynaController/Humanoid_Controller/: CMakeLists.txt  Humanoid_DynaCtrl_Definition.h  Humanoid_StateEstimator.cpp  Humanoid_StateEstimator.hpp  Humanoid_StateProvider.cpp  Humanoid_StateProvider.hpp  Humanoid_interface.cpp  Humanoid_interface.hpp
DynaController/Humanoid_Controller/ContactSet/: FixedBodyContact.cpp  FixedBodyContact.hpp  PitchContact.cpp  PitchContact.hpp  PointContact.cpp  PointContact.hpp  SingleContact.cpp  SingleContact.hpp
DynaController/Humanoid_Controller/CtrlSet/: BodyCtrl.cpp  BodyCtrl.hpp  BodyFootPlanningCtrl.cpp  BodyFootPlanningCtrl.hpp  DoubleContactTransCtrl.cpp  DoubleContactTransCtrl.hpp  SingleContactTransCtrl.cpp  SingleContactTransCtrl.hpp  SwingPlanningCtrl.hpp
DynaController/Humanoid_Controller/HumanoidTestConfig/: CTRL_left_walking_swing.yaml  CTRL_move_to_target_height.yaml  CTRL_right_walking_swing.yaml  CTRL_stance.yaml  CTRL_trans.yaml  TEST_body_ctrl.yaml  TEST_walking.yaml
DynaController/Humanoid_Controller/StateEstimator/: BasicAccumulation.cpp  BasicAccumulation.hpp
DynaController/Humanoid_Controller/TaskSet/: JPosTask.cpp  JPosTask.hpp  LinkHeightTask.cpp  LinkHeightTask.hpp  LinkOriTask.cpp  LinkOriTask.hpp  LinkPosTask.cpp  LinkPosTask.hpp  SelectedJPosTask.cpp  SelectedJPosTask.hpp
DynaController/Mercury_Exercise/: CMakeLists.txt  Mercury_InvKinematics.cpp  Mercury_InvKinematics.hpp  Mercury_StateEstimator.cpp  Mercury_StateEstimator.hpp  Mercury_StateProvider.cpp  Mercury_StateProvider.hpp  Mercury_interface.cpp  Mercury_interface.hpp  MoCapManager.cpp  MoCapManager.hpp
DynaController/Mercury_Exercise/CtrlSet/: FootCtrl.cpp  (+37 more)
DynaController/Mercury_Walking/: CMakeLists.txt  Mercury_InvKinematics.cpp  Mercury_InvKinematics.hpp  Mercury_StateEstimator.cpp  Mercury_StateEstimator.hpp  Mercury_StateProvider.cpp  Mercury_StateProvider.hpp  Mercury_Walking_Definition.h  Mercury_interface.cpp  Mercury_interface.hpp  MoCapManager.cpp  MoCapManager.hpp  WBWC.cpp  WBWC.hpp  WBWC_Relax.cpp  WBWC_Relax.hpp
DynaController/Quadruped_Controller/: CMakeLists.txt
DynaController/SagitP3_Controller/: CMakeLists.txt  SagitP3_DynaCtrl_Definition.h  SagitP3_StateEstimator.cpp  SagitP3_StateEstimator.hpp  SagitP3_StateProvider.cpp  SagitP3_StateProvider.hpp  SagitP3_interface.cpp  SagitP3_interface.hpp  SagitP3_state_interface.cpp  SagitP3_state_interface.hpp
DynaController/TELLO_Controller/: CMakeLists.txt  TELLO_DynaCtrl_Definition.h  TELLO_StateEstimator.cpp  TELLO_StateEstimator.hpp  TELLO_StateProvider.cpp  TELLO_StateProvider.hpp  TELLO_interface.cpp  TELLO_interface.hpp  v2aConverter_DC.py
ExternalSource/Optimizer/: CMakeLists.txt
RobotSystems/: CMakeLists.txt  RobotSystem2D.hpp
RobotSystems/Cheetah3/: CMakeLists.txt  Cheetah3_Definition.h  Cheetah3_Dyn_Model.cpp  Cheetah3_Dyn_Model.hpp  Cheetah3_Kin_Model.cpp  Cheetah3_Kin_Model.hpp  Cheetah3_Model.cpp  Cheetah3_Model.hpp  cheetah3.urdf
RobotSystems/DracoP1/: CMakeLists.txt  Draco_Dyn_Model.cpp  Draco_Dyn_Model.hpp  Draco_Kin_Model.cpp  Draco_Kin_Model.hpp  Draco_Model.cpp  Draco_Model.hpp
RobotSystems/DracoP1Rot/: CMakeLists.txt  DracoModel.cpp  DracoModel.hpp  Draco_Kin_Model.cpp
RobotSystems/Humanoid/: CMakeLists.txt  Humanoid_Definition.h  Humanoid_Dyn_Model.cpp  Humanoid_Dyn_Model.hpp  Humanoid_Kin_Model.cpp  Humanoid_Kin_Model.hpp  Humanoid_Model.cpp  Humanoid_Model.hpp
RobotSystems/Hume/: CMakeLists.txt  Hume_Dyn_Model.cpp  Hume_Dyn_Model.h  Hume_Kin_Model.cpp  Hume_Kin_Model.h  Hume_Model.cpp  Hume_Model.h
RobotSystems/Manipulator/: CMakeLists.txt
RobotSystems/Mini_cheetah/: Quadruped_Dyn_Model.hpp  Quadruped_Kin_Model.cpp  Quadruped_Model.cpp  Quadruped_Model.hpp  quadruped.urdf
RobotSystems/Openchain2DoF/: CMakeLists.txt  OC2_Dyn_Model.cpp  OC2_Dyn_Model.hpp  OC2_Kin_Model.cpp  OC2_Kin_Model.hpp  OC2_Model.cpp  OC2_Model.hpp
RobotSystems/Openchain3DoF/: CMakeLists.txt  OC3_Dyn_Model.cpp  OC3_Dyn_Model.hpp  OC3_Kin_Model.cpp  OC3_Kin_Model.hpp  OC3_Model.cpp  OC3_Model.hpp
RobotSystems/Quadruped/: Quadruped_Definition.h  Quadruped_Dyn_Model.cpp  Quadruped_Kin_Model.hpp
RobotSystems/SagitP3/: CMakeLists.txt  SagitP3.urdf  SagitP3_Definition.h  SagitP3_Dyn_Model.cpp  SagitP3_Dyn_Model.hpp  SagitP3_Kin_Model.cpp  SagitP3_Kin_Model.hpp  SagitP3_Model.cpp  SagitP3_Model.hpp  p3_model_orion.urdf
RobotSystems/TELLO/: CMakeLists.txt  TELLO_Definition.h  TELLO_Dyn_Model.cpp  TELLO_Dyn_Model.hpp  TELLO_Kin_Model.cpp  TELLO_Kin_Model.hpp  TELLO_Model.cpp  TELLO_Model.hpp  TELLO_URDF.urdf  TELLO_humanoid.urdf
RobotSystems/Valkyrie/: valkyrie_simple.urdf
RobotSystems/Walker2D/: CMakeLists.txt  Walker2D_Dyn_Model.cpp  Walker2D_Dyn_Model.hpp  Walker2D_Kin_Model.cpp  Walker2D_Kin_Model.hpp  Walker2D_Model.cpp  Walker2D_Model.hpp
WBC/WBDC_Relax/: CMakeLists.txt  WBDC_Relax.cpp  WBDC_Relax.hpp  WBDC_Relax_Task.cpp  WBDC_Relax_Task.hpp
WBC/WBDC_Rotor/: CMakeLists.txt  WBDC_Rotor.cpp  WBDC_Rotor.hpp
(+731 files in other folders)
