FILE(GLOB_RECURSE headers src/*.h)
FILE(GLOB_RECURSE sources src/*.cpp)
add_library (dynacore_gurobi SHARED ${headers} ${sources})

if (CMAKE_SYSTEM_NAME MATCHES Linux)
   message("************ LINUX GUROBI **************")
   find_library(gurobi_c++ NAMES libgurobi_c++.a PATHS ${CMAKE_CURRENT_SOURCE_DIR}/linux_lib/ REQUIRED)
   find_library(gurobi65 NAMES libgurobi65.so PATHS ${CMAKE_CURRENT_SOURCE_DIR}/linux_lib/ REQUIRED)
#   configure_file(./linux_lib/libgurobi65.so ${CMAKE_BINARY_DIR}/libgurobi.so.6.5.2 COPYONLY)
endif (CMAKE_SYSTEM_NAME MATCHES Linux)

if(APPLE)
   message("************ MAC GUROBI **************")
   find_library(gurobi_c++ NAMES libgurobi_c++.a PATHS ${CMAKE_CURRENT_SOURCE_DIR}/mac_lib/ REQUIRED)
   find_library(gurobi65 NAMES libgurobi65.so PATHS ${CMAKE_CURRENT_SOURCE_DIR}/mac_lib/ REQUIRED)
   configure_file(./mac_lib/libgurobi65.so ${CMAKE_BINARY_DIR}/libgurobi65.so COPYONLY)
endif (APPLE)
target_link_libraries (dynacore_gurobi ${gurobi_c++})
target_link_libraries (dynacore_gurobi ${gurobi65})
